added meta data

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: default
         </h2>
 
         {% if post.thumbnail %}
-        <img src={{ post.thumbnail }} />
+        <img src={{ post.image }} />
         {% endif %}
         {% if post.description %}
         <p style="margin-top: 10px;">{{ post.description }}</p>
