--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
       {% endif %}
       {% if page.share %}
         •
-        <div id="fb-root"></div>
+        <span id="fb-root"></span>
         <script>
             (function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -25,7 +25,7 @@ layout: default
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
         </script>
-        <div class="fb-share-button" data-href="{{ site.baseurl }}{{page.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+        <span class="fb-share-button" data-href="{{ site.baseurl }}{{page.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.baseurl}}{{page.url}}&amp;src=sdkpreparse">Share</a></span>
      {% endif %}
     </p>
   </header>
