--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
         </script>
-        <span class="fb-share-button" data-href="{{ site.baseurl }}{{page.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.baseurl}}{{page.url}}&amp;src=sdkpreparse">Share</a></span>
+        <span class="fb-share-button" data-href="{{site.url}}{{ site.baseurl }}{{page.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{ site.baseurl}}{{page.url}}&amp;src=sdkpreparse">Share</a></span>
      {% endif %}
     </p>
   </header>
