added meta data

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
         </script>
-        <span class="fb-like" data-href="{{site.url}}{{site.baseurl}}{{page.url}}" data-layout="button" data-action="like" data-size="large" data-show-faces="true" data-share="true"></span>
+        <span class="fb-like" data-href="{{site.url}}{{site.baseurl}}{{page.url}}" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></span>
      {% endif %}
     </p>
   </header>
